@@ -4239,8 +4239,11 @@ TclExecuteByteCode(
 	valuePtr = OBJ_AT_TOS;		/* String */
 	value2Ptr = OBJ_UNDER_TOS;	/* Pattern */
 
+	/*
+	 * Use TCL_REG_NOSUB as we come here without capture vars
+	 */
 	regExpr = Tcl_GetRegExpFromObj(interp, value2Ptr,
-		TCL_REG_ADVANCED | (nocase ? TCL_REG_NOCASE : 0));
+		TCL_REG_ADVANCED|TCL_REG_NOSUB|(nocase ? TCL_REG_NOCASE : 0));
 	if (regExpr == NULL) {
 	    match = -1;
 	} else {
