@@ -1,5 +1,8 @@
 2007-12-07  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tclExecute.c (TclExecuteByteCode INST_REGEXP): Use
+	TCL_REG_NOSUB as we come here without capture vars.
+
 	* generic/tclIOCmd.c (FinalizeIOCmdTSD, Tcl_PutsObjCmd): cache
 	stdout channel object for [puts $str] calls.
 
